feat: update Candidato and EnderecoDTO to improve address handling and normalization